@@ -45,7 +45,9 @@
 -Remove uneeded connections to server when removing a channel for viewing
 -Added warnings when try to add channels when the viewer doesn't support them (or that many)
 -Fixed JFreeChart panel behaviour when adding the same channel
--Removed no functional menus and changed some key bindings (see KEYBOARD)
+-Removed non functional menus and changed some key bindings (see KEYBOARD)
+-Added command line parameters
+-Fixed cases where control panel would set the player location when it shouldn't
 
 1.0.1 - September 23, 2004
 -Add tooltips for control panel buttons
